# SASU

./: .deepsource.toml  .env.example  .gitignore  LICENSE  README.md  dbmanager.py  dbsetup.py  embed.py  events.py  getbadges.py  gethours.py  getpic.py  getsteamid.py  main.py  pyproject.toml  requirements.txt  steam_users.db  test.py
commands/: admin_commands.py  user_commands.py
db/: db_operations.py  dbmanager.py  dbsetup.py  dbupdate.py
getfunctions/: getgames.py  gethours.py  getlevel.py  getpic.py  getsteamid.py
getrequests/: getachievements.py  getbadges.py  getgameico.py  getgames.py  gethours.py  getinfo.py  getlevel.py  getpic.py  getsteamid.py
misc/: embed.py  utils.py
