[tool.poetry]
name = "SteamAchievemetsShowUp"
version = "0.1.0"
description = "A Discord bot that interacts with Steam API to retrieve and display user information."
authors = { name="Xhand", email="hendrickherrera9@gmail.com" }
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
discord.py = "^2.0"
aiohttp = "^3.8.4"
dotenv = "^0.21.0"
NewSimpleSQL = "^0.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


